--- a/requirements_pip.txt
+++ b/requirements_pip.txt
@@ -1,11 +1,14 @@
 filterpy==1.4.5
 glob2==0.6
 more-itertools==7.2.0
-numba==0.46.0
-numpy==1.17.2
-nuscenes-devkit==1.1.0
-opencv-python==4.4.0.42
-Pillow==6.2.0
+numba==0.56.4
+numpy==1.23.5
+nuscenes-devkit==1.1.10
+opencv-python==4.7.0.72
+Pillow==9.4.0
 pyquaternion==0.9.5
-scipy==1.2.0
+scipy==1.10.1
 Shapely==1.7.0
+imageio==2.26.0
+ujson==5.7.0
+open3d==0.17.0
